<resources>
    <string name="app_name">CityGuide</string>
    <string name="email"> Enter Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="enter_new_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="enter_mobile_forgot_password">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="selected_item">Selected item:</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>


    <string-array name="Languages">
        <item> Choose Shop Type </item>
        <item>Butcher</item>
        <item>Baker</item>
        <item>Chemist</item>
        <item>Stationery</item>
        <item>Hardware</item>
        <item>Florist</item>
        <item>Newsagent</item>
        <item>Food</item>
        <item>Gym</item>
    </string-array>
    <string name="title_activity_user_name">UserName</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>