<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#CFEBFF">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:hint="Enter Email"
        android:inputType="text"
        android:background="@drawable/text_boundary_background"

        android:drawableLeft="@drawable/ic_baseline_phone_android_24"
        android:drawablePadding="3dp"
        android:maxLines="1"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:hint="Password"
        android:inputType="textPassword"

        android:background="@drawable/text_boundary_background"
        android:maxLines="1"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="3dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#0000FF"
        android:text="Login"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:layout_gravity="center"/>




        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/google"
            android:background="#CFEBFF"



            android:id="@+id/googleSignIn"
            ></ImageButton>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="false"
            android:padding="8dp"
            android:text="@string/register_yourself"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"

            android:gravity="center_horizontal" />


        <TextView
            android:id="@+id/txtAdminLogin"
            android:layout_below="@id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login as Admin"

            android:layout_marginLeft="125dp"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>

    </RelativeLayout>
</LinearLayout>